# ai-mini-project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
docs/: pdf_coverage_checklist.md  state_design.md
outputs/: semiconductor_strategy_report.md
scripts/: show_trl_agent_output.py
src/semiconductor_agent/: __init__.py  agents.py  graph.py  models.py  pdf_writer.py  rag.py  runtime.py  search.py  shared_standards.py  state.py
src/semiconductor_agent/agent_nodes/: __init__.py  base.py  market.py  patent.py  report.py  strategy.py  supervisor.py  technique.py  threat.py  trl.py
src/semiconductor_agent/models/: models.py
src/semiconductor_agent/workflow/: builder.py  dependencies.py  review.py  team.py
tests/: test_pdf_architecture.py
