[project]
name = "semiconductor-langgraph-agent"
version = "0.1.0"
description = "PDF-faithful LangGraph workflow for semiconductor strategy analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.27",
  "langchain-openai>=0.3.0",
  "pydantic>=2.9.0",
  "pypdf>=5.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
